--- a/assets/index.html
+++ b/assets/index.html
@@ -8,10 +8,69 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>test</h1>
+    <!-- 본문바로가기 -->
+    <p id="skipNav" class="hide"><a href="./index.html">본문 바로가기</a></p>
+
+    <!-- header -->
+    <header id="header"></header>
+
+    <!-- mainVisual -->
+    <section id="mainVisual">
+        <h1>PalPalGram에 오신 여러분을 환영합니다😊</h1>
+        <div class="outer">
+            <div class="list">
+                <div class="inner">
+                    <h2>first...</h2>
+                    <p>내용입력</p>
+                </div>
+                <div class="inner">
+                    <h2>second...</h2>
+                    <p>내용입력</p>
+                </div>
+                <div class="inner">
+                    <h2>third...</h2>
+                    <p>내용입력</p>
+                </div>
+            </div>
+        </div>
+          
+        <div class="buttonList">
+            <button class="buttonLeft">&lt; Left</button>
+            <button class="buttonRight">Right &gt;</button>
+        </div>
+    </section>
+
+    <!-- main -->
+    <main id="container" class="main">
+        <div class="palpal">
+            <h3>PalPalGram</h3>
+            <p>팔팔그램에 오신 여러분을 환영합니다</p>
+            <div class="newspid">
+                <div class="card">
+                    <div class="cardImg">
+                        <img src="./images/example.png" alt="예시" />
+                    </div>
+                    <div class="cardHead">
+                     헤더
+                    </div>
+                    <div class="cardMain">
+                      <p>메인내용</p>
+                    </div>
+                    <div class="cardFooter">
+                      푸터
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    
+    <!-- footer -->
+    <footer id="footer">
+        <p>design by node.js 8조 - palpal</p>
+    </footer>
 
 
     <!-- script part -->
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
