--- a/assets/sub.html
+++ b/assets/sub.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>detail Page</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/sub.css">
+    <link rel="stylesheet" href="./static/css/reset.css">
+    <link rel="stylesheet" href="./static/css/sub.css">
 </head>
 <body>
     
 
 
     <!-- script part -->
-    <script src="./js/sub.js"></script>
+    <script type="module" src="./js/sub.js"></script>
 </body>
 </html>
