--- a/assets/index.html
+++ b/assets/index.html
@@ -11,6 +11,20 @@
     <!-- 본문바로가기 -->
     <p id="skipNav" class="hide"><a href="./index.html">본문 바로가기</a></p>
 
+    <!-- sideBar -->
+    <!-- hamburger Menu -->
+    <input class="burgerCheck" type="checkbox" id="burgerCheck" />
+    <label class="burgerIcon" for="burgerCheck"><span class="burgerSticks"></span></label>
+    
+    <div class="menu">
+        <div class="menuBox">
+            <div class="messages">
+                <div class="welcome" id="welcomeMsg"></div>
+                <p>test</p>
+            </div>
+        </div>
+    </div>
+
     <!-- header -->
     <header id="header">
         <div class="inner">
@@ -26,21 +40,6 @@
                     </li>
                 </ul>
             </div>
-
-            <!-- hamburger Menu -->
-            <nav class="nav">
-                <ul class="gnb" id="menu">
-                    <li><a href="#">로그인</a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#">로그아웃</a></li>
-                    <li>
-                        <ul class="dark">
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
         </div>
     </header>
 
