--- a/assets/sub.html
+++ b/assets/sub.html
@@ -11,6 +11,17 @@
     <!-- 본문바로가기 -->
     <p id="skipNav" class="hide"><a href="./index.html">본문 바로가기</a></p>
 
+    <!-- sideBar -->
+    <!-- hamburger Menu -->
+    <div class="menu">
+        <div class="menuBox">
+            <div class="messages">
+                <div class="welcome" id="welcomeMsg"></div>
+                <p>test</p>
+            </div>
+        </div>
+    </div>
+
     <!-- header -->
     <header id="header">
         <div class="inner">
@@ -30,12 +41,6 @@
             <!-- hamburger Menu -->
             <input class="burgerCheck" type="checkbox" id="burgerCheck" />
             <label class="burgerIcon" for="burgerCheck"><span class="burgerSticks"></span></label>
-            
-            <div class="menu">
-                <div class="menuBox">
-                    <div class="welcome" id="welcomeMsg"></div>
-                </div>
-            </div>
         </div>
     </header>
 
