--- a/assets/sub.html
+++ b/assets/sub.html
@@ -11,17 +11,6 @@
     <!-- 본문바로가기 -->
     <p id="skipNav" class="hide"><a href="./index.html">본문 바로가기</a></p>
 
-    <!-- sideBar -->
-    <!-- hamburger Menu -->
-    <div class="menu">
-        <div class="menuBox">
-            <div class="messages">
-                <div class="welcome" id="welcomeMsg"></div>
-                <p>test</p>
-            </div>
-        </div>
-    </div>
-
     <!-- header -->
     <header id="header">
         <div class="inner">
@@ -37,6 +26,7 @@
                     </li>
                 </ul>
             </div>
+            <div class="welcome" id="welcomeMsg"></div>
 
             <!-- hamburger Menu -->
             <input class="burgerCheck" type="checkbox" id="burgerCheck" />
@@ -57,6 +47,7 @@
                 <div class="postHead">
                     <button class="cmtBtn" id="likeBtn" onclick="like();">❤</button>
                     <button class="cmtBtn" id="cmtBtn" onclick="cmt();">💌</button>
+                    <p class="likeCount"></p>
                     
                 </div>
                 <div class="postMain">
@@ -76,6 +67,7 @@
 
 
     <!-- script part -->
+    <script type="module" src="./js/main.js"></script>
     <script type="module" src="./js/sub.js"></script>
 </body>
 </html>
