--- a/assets/signup.html
+++ b/assets/signup.html
@@ -12,8 +12,11 @@
       <h1>회원가입</h1>
 
       <form action="/signup" method="POST">
-        <label for="usersId">사용자명:</label>
+        <label for="usersId">이메일:</label>
         <input type="text" id="usersId" name="usersId" placeholder="아이디를 입력해주세요">
+        <br>
+        <label for="usersId">닉네임:</label>
+        <input type="text" id="nickname" name="nickname" placeholder="아이디를 입력해주세요">
         <br>
         <label for="password">비밀번호:</label>
         <input type="password" id="password" name="password" placeholder="비밀번호를 입력해주세요">
