--- a/assets/sub.html
+++ b/assets/sub.html
@@ -47,7 +47,7 @@
                 <div class="postHead">
                     <button class="cmtBtn" id="likeBtn" onclick="like();">❤</button>
                     <button class="cmtBtn" id="cmtBtn" onclick="cmt();">💌</button>
-                    <p class="likeCount"></p>
+                    <div class="likeCount"></div>
                     
                 </div>
                 <div class="postMain">
