--- a/assets/index.html
+++ b/assets/index.html
@@ -73,7 +73,7 @@
             <h3>게시글 작성</h3>
             <p>여러분의 이야기를 작성해보세요 ❣</p>
             <div class="postBtnWrap">
-                <button class="postBtn" onclick="showPopup();">게시글 작성 Btn</button>
+                <button class="postBtn" onclick="showPopup();">게시글 작성은 여기서..!</button>
             </div>
         </div>
     </main>
