--- a/assets/showPopup.html
+++ b/assets/showPopup.html
@@ -25,10 +25,13 @@
             </div>
         </form>
         <div class="postBtnWrap">
-            <button type="submit" class="btnGo">등록</button>
-            <button type="button" class="btnClose">닫기</button>
+            <button type="submit" class="btnGo" onclick="postPush();">게시글 등록</button>
         </div>
     </div>
+
+
+    <!-- scirpt part -->
+    <script type="module" src="./js/main.js"></script>
     
 </body>
 </html>
