--- a/assets/login.html
+++ b/assets/login.html
@@ -7,26 +7,37 @@
     <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
-    <div class="login">
-        <h1>로그인</h1>
-  
-        <form action="/login" method="POST">
-          <label for="username">사용자명:</label>
-          <input type="text" id="username" name="username" placeholder="아이디를 입력해주세요!">
-          <br>
-          <label for="password">비밀번호:</label>
-          <input type="password" id="password" name="password">
-          <br>
-          <button type="submit" class="loginBtn">로그인</button>
-        </form>
-  
-        <form action="/signup" method="GET">
-          <button type="submit" class="signupBtn">회원가입</button>
-        </form>
-      </div>  
+  <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="loginModalLabel">로그인</h1>
+        </div>
+
+        <div class="modal-body">
+          <form id="loginForm">
+            <div class="mb-3">
+              <label for="username">사용자명:</label>
+              <input type="text" id="username" name="username" placeholder="아이디를 입력해주세요!">
+            </div>
+            <div class="mb-3">
+              <label for="password">비밀번호:</label>
+              <input type="password" id="password" name="password">
+            </div>
+          </form>
+        </div>
+
+        <div class="modal-footer">
+          <button onclick="login()" class="btn btn-primary">로그인</button>
+          <button class="btn signupBtn" onClick="location.href='./signup.html'">회원가입</button>
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">닫기</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
     <!-- script part -->
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/login.js"></script>
 </body>
 </html>
