--- a/assets/showPopup.html
+++ b/assets/showPopup.html
@@ -8,30 +8,43 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <!-- postWrite popup -->
-    <div class="postWrap">
-        <form action="../routes/postsRoute.js" method="post">
-            <div class="formGroup">
-                <label for="title">제목: </label>
-                <input type="text" class="formControl" id="title"
-                placeholder="제목 입력(4-100)" name="title"
-                maxlength="100" required="required"
-                pattern=".{4,100}">
+    <!-- 게시글 -->
+    <div class="postWrap" >
+        <div class="row align-items-md-stretch" >
+            <div class="col-md-6" >
+                <div class="h-100 p-4 bg-body-tertiary border rounded-3" >
+                    <div class="col-md-6 text-center" >
+                        <div>
+                            <img id="postImg" src="" alt="postImg" />
+                        </div>
+                    </div>
+                    <p id="nickname" >nickname</p>
+                    <p id="title" >title</p>
+                    <p id="content">content</p>
+                    <img src="./images/like.png" alt="좋아요" class="likeIcon" onclick="postLike()">
+                    <h1 id="like"></h1>
+                    <div class="btn-container">
+                        <button class="updateBtn" type="button" onclick="postUpdate()">수정하기</button>
+                        <button class="deleteBtn" type="button" onclick="postDelete()">삭제하기</button>
+                    </div>
+                </div>
             </div>
-            <div class="formGroup">
-                <label for="content">내용: </label>
-                <textarea class="formControl" rows="5" id="content"
-                name="content" placeholder="내용 작성"></textarea>
-            </div>
-        </form>
-        <div class="postBtnWrap">
-            <button type="submit" class="btnGo" onclick="postPush();">게시글 등록</button>
         </div>
     </div>
 
 
     <!-- scirpt part -->
-    <script type="module" src="./js/main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.js"
+      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="./js/post.js"></script>
     
 </body>
 </html>
