--- a/assets/showPopup.html
+++ b/assets/showPopup.html
@@ -45,6 +45,8 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="./js/post.js"></script>
-    
+    <script>
+        
+    </script>
 </body>
 </html>
