--- a/assets/signup.html
+++ b/assets/signup.html
@@ -18,16 +18,20 @@
         <div class="modal-body">
           <form id="loginForm">
             <div class="mb-3">
-              <label for="username">ID:</label>
-              <input type="text" id="username" name="username" placeholder="당신의 이메일을 입력해주세요!">
+              <label for="userId">ID:</label>
+              <input type="text" id="userId" name="userId" placeholder="당신의 이메일을 입력해주세요!">
+            </div>
+            <div class="mb-3">
+              <label for="nickname">nickname:</label>
+              <input type="text" id="nickname" name="nickname" placeholder="당신의 이메일을 입력해주세요!">
             </div>
             <div class="mb-3">
               <label for="password">비밀번호:</label>
-              <input type="password" id="signupPw" name="password" placeholder="비밀번호를 한번 더 입력해주세요">
+              <input type="password" id="password" name="password" placeholder="비밀번호를 한번 더 입력해주세요">
             </div>
             <div class="mb-3">
-              <label for="password">번호확인:</label>
-              <input type="password" id="signupConfirm" name="passwordCheck" placeholder="비밀번호를 한번 더 입력해주세요">
+              <label for="confirm">번호확인:</label>
+              <input type="confirm" id="confirm" name="confirm" placeholder="비밀번호를 한번 더 입력해주세요">
             </div>
           </form>
         </div>
