--- a/assets/showPopup.html
+++ b/assets/showPopup.html
@@ -18,11 +18,8 @@
                             <img id="postImg" src="" alt="postImg" />
                         </div>
                     </div>
-                    <p id="nickname" >nickname</p>
                     <p id="title" >title</p>
                     <p id="content">content</p>
-                    <img src="./images/like.png" alt="좋아요" class="likeIcon" onclick="postLike()">
-                    <h1 id="like"></h1>
                     <div class="btn-container">
                         <button class="updateBtn" type="button" onclick="postUpdate()">수정하기</button>
                         <button class="deleteBtn" type="button" onclick="postDelete()">삭제하기</button>
@@ -44,7 +41,7 @@
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="./js/post.js"></script>
+    <script type="module" src="./js/main.js"></script>
     <script>
         
     </script>
