--- a/assets/signup.html
+++ b/assets/signup.html
@@ -23,15 +23,15 @@
             </div>
             <div class="mb-3">
               <label for="nickname">nickname:</label>
-              <input type="text" id="nickname" name="nickname" placeholder="당신의 이메일을 입력해주세요!">
+              <input type="text" id="nickname" name="nickname" placeholder="당신의 닉네임을 입력해주세요!">
             </div>
             <div class="mb-3">
               <label for="password">비밀번호:</label>
-              <input type="password" id="password" name="password" placeholder="비밀번호를 한번 더 입력해주세요">
+              <input type="password" id="password" name="password" placeholder="비밀번호를 입력해주세요">
             </div>
             <div class="mb-3">
               <label for="confirm">번호확인:</label>
-              <input type="confirm" id="confirm" name="confirm" placeholder="비밀번호를 한번 더 입력해주세요">
+              <input type="password" id="confirm" name="confirm" placeholder="비밀번호를 한번 더 입력해주세요">
             </div>
           </form>
         </div>
