--- a/assets/index.html
+++ b/assets/index.html
@@ -73,7 +73,8 @@
             <div class="peopleBtnWrap">
                 <button class="peopleBtn" onclick="people()">여기를 눌러주세요</button>
             </div>
-            <p class="people" id="peoples" style="display: none;">김재혁(leader), 배찬용, 김재용, 김동현, <br>+ 7조분들</p>
+            <p class="people" id="peoples" style="display: none;">김재혁(leader), 배찬용, 김재용, 김동현 
+                <br>+그외 많은 사람들의 도움</p>
         </div>
     </main>
     
